--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!--Header with links to contact and portfolio pages-->
     <div class="header">
-       <h1>Will Bursch</h1>
+       <div><h1>Will Bursch</h1></div>
     
        
         <div class="header-right">
